--- a/hep-th-0507171/hep-th-0507171.tex
+++ b/hep-th-0507171/hep-th-0507171.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prd,groupedaddress,showpacs]{revtex4}
+\documentclass[aps,prd,groupedaddress,showpacs,12pt]{revtex4-1}
 \usepackage{graphicx,epsf,amssymb,amsmath,latexsym}
 \newcommand{\be}{\begin{eqnarray}}
 \newcommand{\ee}{\end{eqnarray}}
@@ -47,6 +47,49 @@
 \newcommand{\sr}{W}
 \newcommand{\rr}{S}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \begin{document}
 
 %\fontsize{22}{33}
@@ -73,7 +116,6 @@
 \vspace{.3in}
 
 \author{S.W.Hawking}
-\email{...}
 \affiliation{DAMTP, Center for Mathematical Sciences, university of Cambridge, Wilberforce Road, Cambridge CB3 0WA, UK }
 
 \vskip.3in
@@ -100,7 +142,7 @@ The question of whether information is lost in black holes is investigated using
 
 The black hole information paradox started in 1967 when Werner Israel showed that the Schwarzschild metric was the only static vacuum black hole solution \cite{Israel}. This was then generalized to the no hair theorem, the only stationary rotating black hole solutions of the Einstein Maxwell equations are the Kerr Newman metrics \cite{NoHair}. The no hair theorem implied that all information about the collapsing body was lost from the outside region apart from three conserved quantities: the mass, the angular momentum, and the electric charge.
 
-This loss of information wasn't a problem in the classical theory. A classical black hole would last for ever and the information could be thought of as preserved inside it, but just not very accessible. However, the situation changed when I discovered that quantum effects would cause a black hole to radiate at a steady rate \cite{Stephen1}. At least in the approximation I was using the radiation from the black hole would be completely thermal and would carry no information\cite{Stephen2}. So what would happen to all that information locked inside a black hole that evaporated away and disappeared completely?  It seemed the only way the information could come out would be if the radiation was not exactly thermal but had subtle correlations. No one has found a mechanism to produce correlations but most physicists believe one must exist. If information were lost in black holes, pure quantum states would decay into mixed states and quantum gravity wouldn't be unitary.
+This loss of information wasn't a problem in the classical theory. A classical black hole would last for ever and the information could be thought of as preserved inside it, but just not very accessible. However, the situation changed when I discovered that quantum effects would cause a black hole to radiate at a steady rate \cite{Stephen1}. At least in the approximation I was using the radiation from the black hole would be completely thermal and would carry no information \cite{Stephen2}. So what would happen to all that information locked inside a black hole that evaporated away and disappeared completely?  It seemed the only way the information could come out would be if the radiation was not exactly thermal but had subtle correlations. No one has found a mechanism to produce correlations but most physicists believe one must exist. If information were lost in black holes, pure quantum states would decay into mixed states and quantum gravity wouldn't be unitary.
 
 I first raised the question of information loss in 75 and the argument continued for years without any resolution either way. Finally, it was claimed that the issue was settled in favor of conservation of information by ADS-CFT. 
 ADS-CFT is a conjectured duality between string theory in anti de Sitter space and a conformal field theory on the boundary of anti de Sitter space at infinity \cite{ADSCFTreviews }. Since the conformal field theory is manifestly unitary the argument is that string theory must be information preserving. Any information that falls in a black hole in anti de Sitter space must come out again. But it still wasn't clear how information could get out of a black hole. It is this question, I will address in this paper. 
