--- a/1108.2015/1108.2015.tex
+++ b/1108.2015/1108.2015.tex
@@ -1,6 +1,8 @@
 \input ../helpers/harvmac-psu
 %\input pdftexconfig
 \input graphicx
+\raggedbottom
+\tolerance=10000
 
 \def\Title#1#2{\rightline{#1}\ifx\answ\bigans\nopagenumbers\pageno0\vskip1in
 \else\pageno1\vskip.8in\fi \centerline{\titlefont #2}\vskip .5in}
@@ -363,13 +365,14 @@ and  is mixed, with entropy $S=-{\rm Tr}(\rho\log\rho) \sim S_{BH}$. Barring a r
 
 \newsec{Models of unitary evolution}
 
-The basic conflict between QM/energy conservation, locality, and Lorentz/diffe\-omorph\-ism invariance that arises in the previous scenario has been called the ``information paradox."  It was argued in  \refs{\QBHB,\NLvC} (see also  \refs{\GiLi,\LQGST,\BHIUN}) that this is not a true paradox, in that we don't have a sharp derivation of the state \hawkstate\ and density matrix \rhoout\ in a perturbative framework that takes into account backreaction.  However, as discussed in  \refs{\GiLi,\LQGST,\BHIUN,\QBHB,\NLvC}, it seems evident that some amount of nonlocality with respect to the semiclassical picture is needed to avoid the essential argument for lost information.  This section will model a kind of nonlocal evolution apparently needed for unitarity, in the effective Hilbert-space approach.
+The basic conflict between QM/energy conservation, locality, and Lorentz/ \break
+diffeomorphism invariance that arises in the previous scenario has been called the ``information paradox."  It was argued in  \refs{\NLvC,\QBHB} (see also  \refs{\LQGST,\BHIUN,\GiLi}) that this is not a true paradox, in that we don't have a sharp derivation of the state \hawkstate\ and density matrix \rhoout\ in a perturbative framework that takes into account backreaction.  However, as discussed in  \refs{\GiLi,\LQGST,\BHIUN,\QBHB,\NLvC}, it seems evident that some amount of nonlocality with respect to the semiclassical picture is needed to avoid the essential argument for lost information.  This section will model a kind of nonlocal evolution apparently needed for unitarity, in the effective Hilbert-space approach.
 
 As one guide, we begin with the expectation that the internal Hilbert space of the BH shrinks, and contains no information when $M\rightarrow0$. A candidate parameterization for $N(M) = \log({\rm dim} \calhh)$ is  \ndof, but one could also consider other functions decreasing to zero.  This contrasts with the evolution \paircreate, in which $N(M)$ increases by one in each step (being trivially incautious in distinguishing bits and nats).
 
 We can model unitary evolution, in which $N(M)$ decreases by one at each step, in different modifications of \paircreate. One is, separating off the leftmost qubit and choosing a basis element $\ahats$ for the remaining internal Hilbert space,
 %
-\eqn\evolone{\zhats \ahats \as \rightarrow \uhat\ahats \otimes \zhats \zs \otimes U \as\quad ,\quad \ohats \ahats \as \rightarrow \uhat' \ahats \otimes \zhats \os \otimes U\as\ ,}
+\eqn\evolone{\zhats \ahats \as \rightarrow \uhat\ahats \otimes \zhats \zs \otimes U \as,\quad \ohats \ahats \as \rightarrow \uhat' \ahats \otimes \zhats \os \otimes U\as\ ,}
 %
 which is effectively unitary. Moreover, if the rightmost internal qubit is always in a definite state, here $\zhats$, it can be forgotten or ``erased" with impunity.  Thus, internal information is transmitted to the external state, and $N(M)$ decreases by one.\foot{Note also a relation with the final-state picture of  \refs{\HoMa}; if a given internal qubit first transitions to a given canonical state, this qubit may then be unitarily forgotten.  See also \Rozali.}   
 
@@ -378,7 +381,7 @@ Note also that in the semiclassical/Hawking picture \paircreate, $T_r=\infty$, a
 
 Eq.~\evolone\ represents a big departure from \paircreate, particularly if present in early evolution of the BH.  One may consider alternatives with smaller departures.  One is
 %
-\eqn\evoltwo{\eqalign{\zhats\zhats \ahats \as &\rightarrow \uhat \ahats\otimes {1\over \rtt}\left(\zhats \zs+ \ohats\os\right)\otimes U \as\quad,\quad  \zhats\ohats \ahats \as \rightarrow \uhat \ahats\otimes\zhats\os\otimes U\as\cr \ohats \zhats \ahats \as  &\rightarrow \uhat \ahats\otimes\ohats\zs\otimes U\as\quad,\quad \ohats\ohats \ahats \as \rightarrow \uhat \ahats\otimes {1\over \rtt}\left(\zhats \zs- \ohats\os\right)\otimes U \as\ , }} 
+\eqn\evoltwo{\eqalign{\zhats\zhats \ahats \as &\rightarrow \uhat \ahats\otimes {1\over \rtt}\left(\zhats \zs+ \ohats\os\right)\otimes U \as\cr  \zhats\ohats \ahats \as &\rightarrow \uhat \ahats\otimes\zhats\os\otimes U\as\cr \ohats \zhats \ahats \as  &\rightarrow \uhat \ahats\otimes\ohats\zs\otimes U\as\quad\cr \ohats\ohats \ahats \as &\rightarrow \uhat \ahats\otimes {1\over \rtt}\left(\zhats \zs- \ohats\os\right)\otimes U \as\ , }} 
 %
 which, with $\uhat=1$, does not alter the Hawking state until $\sim T_{evap}\sim R S_{BH}$.   Other simple generalizations clearly exist, including using other pairs.\foot{Note that a version where one internal qubit is imprinted in a pair does not relay a net bit of information  \refs{\Mathurrev,\GiSh}.} Yet another alternative (also generalizable) uses other states, {\it e.g.} $|1'\rangle$, $|1''\rangle$, that have small amplitude for occupancy in the Hawking state \hawkstate:
 %
