--- a/2307.04636/IllustrationForResearch_arxiv.tex
+++ b/2307.04636/IllustrationForResearch_arxiv.tex
@@ -9,6 +9,52 @@
 
 %https://tex.stackexchange.com/questions/213316/which-inputenc-for-these-latvian-letters
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \title{
     On the importance of illustration for mathematical research
 }
@@ -59,18 +105,18 @@ Mathematical understanding is built in many ways. Among these, illustration has 
 
 In the last decade, it has become increasingly possible for researchers to augment their experience of abstract mathematics with sensory exploration: 3D-printed or CNC-milled models, the ability to walk through seemingly impossible physical spaces with virtual reality, and the potential to explore high-dimensional mathematical spaces through computer visualisation all provide such opportunities, among other media. Now much more than simply an aid to understanding, these tools have reached a level of sophistication that makes them indispensable to many frontiers of mathematical research. To preview one particular case recounted below, the tantalizing structure visible in Figure \ref{fig:sandpile} (and many others like it) led to conjectures and proofs that would likely otherwise have been inaccessible. 
 
+The list of examples of research driven by illustration is rapidly expanding in recent years. 
+We use the term \emph{illustration} to encompass any way one might bring a mathematical idea into physical form or experience, including hand-made diagrams or models, computer visualization, 3D printing, or virtual reality, among many others. 
+We will discuss instances of this interplay including breakthroughs in such areas as representation theory (such as Knutson and Tao's honeycombs~\cites{honeycombAMS,honeycomb1,honeycomb2}), self-organized criticality (work of Levine, Pegden, Smart and others on Abelian sandpiles~\cite{LPS17} as illustrated in Figure \ref{fig:sandpile}), geometry (Coiculescu and Schwartz on Thurston's \emph{Sol} geometry~\cite{coiculescu2022sol}), and most recently the solution of the einstein problem with the hat monotile~\cite{smith2023aperiodic} and its chiral version, the spectre~\cite{smith2023chiral}. 
+These solutions came after many years of physical exploration by Dave Smith, which revealed especially interesting properties of the hat tile.
+Note that these papers have already sparked several follow-up works~\cites{reitebuch2023direct,baake2023dynamics,socolar2023quasicrystalline}).
+
 \begin{figure}
     \centering
     \includegraphics[width=0.95\linewidth]{images/close-sandpile.png}
     \caption{Detail of a $\mathbb{Z}^2$-lattice sandpile stabilized from a starting configuration with 500 million grains at the origin.  Whenever any position has at least 4 grains, it distributes one to each neighbour.  Nodes in the stable configuration have 0, 1, 2 or 3 grains (indicated by colour).  Image by Stange.}
     \label{fig:sandpile}
 \end{figure}
-
-The list of examples of research driven by illustration is rapidly expanding in recent years. 
-We use the term \emph{illustration} to encompass any way one might bring a mathematical idea into physical form or experience, including hand-made diagrams or models, computer visualization, 3D printing, or virtual reality, among many others. 
-We will discuss instances of this interplay including breakthroughs in such areas as representation theory (such as Knutson and Tao's honeycombs~\cites{honeycombAMS,honeycomb1,honeycomb2}), self-organized criticality (work of Levine, Pegden, Smart and others on Abelian sandpiles~\cite{LPS17} as illustrated in Figure \ref{fig:sandpile}), geometry (Coiculescu and Schwartz on Thurston's \emph{Sol} geometry~\cite{coiculescu2022sol}), and most recently the solution of the einstein problem with the hat monotile~\cite{smith2023aperiodic} and its chiral version, the spectre~\cite{smith2023chiral}. 
-These solutions came after many years of physical exploration by Dave Smith, which revealed especially interesting properties of the hat tile.
-Note that these papers have already sparked several follow-up works~\cites{reitebuch2023direct,baake2023dynamics,socolar2023quasicrystalline}).
 
 Illustration is beginning to find a home at programs like the special semester in \emph{Illustrating Mathematics} in Fall 2019 at the Institute for Computational and Experimental Research in Mathematics (ICERM) and the Institute for Advanced Study (IAS)/Park City Math Institute (PCMI) virtual program in Summer 2021,\footnote{See \url{http://illustratingmath.org/} for links to these two programs, along with many other resources.} and a community is forming around many modern tools.
 \begin{CJK*}{UTF8}{bsmi}
