--- a/2303.18223/main.tex
+++ b/2303.18223/main.tex
@@ -49,10 +49,31 @@
 \usepackage{cite}
 \usepackage[numbers,sort&compress]{natbib}
 
+\usepackage[noBBpl,sc]{mathpazo}
+\pagestyle{plain}
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
 
 \ifCLASSINFOpdf
 \else
 \fi
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 
 \newcommand\MYhyperrefoptions{bookmarks=true,bookmarksnumbered=true,
