--- a/2407.00680/main.tex
+++ b/2407.00680/main.tex
@@ -1,4 +1,4 @@
-\documentclass{amsart}
+\documentclass[12pt]{amsart}
 
 \title{Did Turing prove the undecidability of the halting problem?}
 
@@ -19,14 +19,24 @@
 %\subjclass[2000]{03E45, 03E55,03E40}  check this
 %\keywords{Turing, halting problem}
 
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
 \usepackage{latexsym,amsfonts,amsmath,amssymb,mathrsfs}
 \usepackage{changepage}% for adjustwidth
 \usepackage{csquotes}
 \usepackage{braket}
 \usepackage{bbm}
-\usepackage[hidelinks]{hyperref}
 \usepackage{relsize}
-\usepackage[cmyk,svgnames,dvipsnames]{xcolor}
+%\usepackage[cmyk,svgnames,dvipsnames]{xcolor}
 \usepackage{tikz}
 \usetikzlibrary {3d}
 \usepackage{comment}
@@ -64,6 +74,27 @@
     {arXiv\addcolon\nolinkurl{#1}\iffieldundef{eprintclass}{}{\UrlFont{\mkbibbrackets{\thefield{eprintclass}}}}}}
 %%
 \renewcommand\emptyset{\varnothing}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{1}
+
 %\usepackage{titlesec}
 
 \begin{document}
@@ -75,12 +106,12 @@ We discuss the accuracy of the attribution commonly given to Turing \cite{Turing
 \end{abstract}
 \maketitle
 
-\begin{quote}
-\setcounter{tocdepth}{1}
-\footnotesize
+{
+\small
 \tableofcontents
-\end{quote}
+}
 
+\newpage
 The \emph{halting problem} is the decision problem of determining whether a given computer program halts on a given input, a problem famously known to be computably undecidable. In the computability theory literature, one quite commonly finds attribution for this result given to Alan Turing \cite{Turing1936:On-computable-numbers}, and we should like to consider the extent to which these attributions are accurate. After all, the term \emph{halting problem}, the modern formulation of the problem, as well as the common self-referential proof of its undecidability, are all---strictly speaking---absent from Turing's work. However, Turing does introduce the concept of an undecidable decision problem, proving that what he calls the circle-free problem is undecidable and subsequently also that what we call the symbol-printing problem, to decide if a given program will ever print a given symbol, is undecidable. This latter problem is easily seen to be computably equivalent to the halting problem and can arguably serve in diverse contexts and applications in place of the halting problem---they are easily translated to one another. Furthermore, Turing laid down an extensive framework of ideas sufficient for the contemporary analysis of the halting problem, including: the definition of Turing machines; the labeling of programs by numbers in a way that enables programs to be enumerated and also for them to be given as input to other programs; the existence of a universal computer; the undecidability of several problems that, like the halting problem, take other programs as input, including the circle-free problem, the symbol-printing problem, and the infinite-symbol-printing problem, as well as the Hilbert-Ackermann Entscheidungsproblem. In light of these facts, and considering some general cultural observations, by which mathematical attributions are often made not strictly for the exact content of original work, but also generously in many cases for the further aggregative insights to which those ideas directly gave rise, ultimately we do not find it unreasonable to offer qualified attribution to Turing for the undecidability of the halting problem. That said, we also find it incorrect to suggest that one will find a discussion of the halting problem or a proof of its undecidability in \cite{Turing1936:On-computable-numbers}.\goodbreak
 
 \section{The halting problem}\label{Section.Halting-problem}
