--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-06-05 07:15:08 -0400 
+%% Created for Pete Su at 2024-07-04 12:54:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Weinberg1989,
+	author = {Weinberg, Steven},
+	date-added = {2024-07-04 12:54:27 -0400},
+	date-modified = {2024-07-04 12:54:33 -0400},
+	doi = {10.1016/0003-4916(89)90276-5},
+	issn = {0003-4916},
+	journal = {Ann. Phys-new. York.},
+	number = {2},
+	pages = {336--386},
+	publisher = {Elsevier BV},
+	title = {Testing quantum mechanics},
+	url = {http://dx.doi.org/10.1016/0003-4916(89)90276-5},
+	volume = {194},
+	year = {1989},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/0003-4916(89)90276-5}}
+
+@article{Weinberg1989a,
+	author = {Weinberg, Steven},
+	date-added = {2024-07-04 12:53:33 -0400},
+	date-modified = {2024-07-04 12:53:43 -0400},
+	doi = {10.1016/0003-4916(89)90276-5},
+	issn = {0003-4916},
+	journal = {Ann. Phys-new. York.},
+	number = {2},
+	pages = {336--386},
+	publisher = {Elsevier BV},
+	title = {Testing quantum mechanics},
+	url = {http://dx.doi.org/10.1016/0003-4916(89)90276-5},
+	volume = {194},
+	year = {1989},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/0003-4916(89)90276-5}}
 
 @article{Lowe1995,
 	author = {Lowe, David A. and Polchinski, Joseph and Susskind, Leonard and Thorlacius, L{\'a}rus and Uglum, John},
