--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-07-04 12:54:33 -0400 
+%% Created for Pete Su at 2024-07-08 22:09:36 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Teta2009,
+	author = {Teta, Alessandro},
+	date-added = {2024-07-08 22:09:14 -0400},
+	date-modified = {2024-07-08 22:09:22 -0400},
+	doi = {10.1088/0143-0807/31/1/019},
+	issn = {1361-6404},
+	journal = {Eur. J. Phys.},
+	note = {\href{http://arxiv.org/abs/0905.1467v1}{arxiv:0905.1467v1}},
+	number = {1},
+	pages = {215--227},
+	publisher = {IOP Publishing},
+	title = {Classical behaviour in quantum systems: the case of straight tracks in a cloud chamber},
+	url = {http://dx.doi.org/10.1088/0143-0807/31/1/019},
+	volume = {31},
+	year = {2009},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/0143-0807/31/1/019}}
 
 @article{Weinberg1989,
 	author = {Weinberg, Steven},
