--- a/0905.1467/0905.1467-psu.tex
+++ b/0905.1467/0905.1467-psu.tex
@@ -36,7 +36,7 @@
 \newcommand{\ih}{\frac{i}{\hbar}}
 
 \newcommand{\n}{\relax} 
-\newcommand{\vs}{\vspace{0.5cm}}
+\newcommand{\vs}{\medskip}
 \newcommand{\f}{\frac}
 \newcommand{\ba}{\begin{eqnarray}} 
 \newcommand{\ea}{\end{eqnarray}}
@@ -232,7 +232,7 @@ We summarize here the basic rules for a system of $n$ quantum particles in $\err
 
 \vs
 
-1.  All the information on the system is encoded in the wave function $\psi_t (x_1, \ldots ,x_n)$, $x_j \in \erre^d$,  which is an element of the Hilbert space $L^2(\erre^{dn})$ with $\|\psi_t\|=1$. The wave function $\psi_t$ is referred to as the (pure) state of the system at time $t$.
+1. All the information on the system is encoded in the wave function $\psi_t (x_1, \ldots ,x_n)$, $x_j \in \erre^d$,  which is an element of the Hilbert space $L^2(\erre^{dn})$ with $\|\psi_t\|=1$. The wave function $\psi_t$ is referred to as the (pure) state of the system at time $t$.
 
 
 2. Given the initial state $\psi_0$, the state at time $t$ is the solution of the Schr\"{o}dinger equation 
@@ -254,9 +254,9 @@ The prescription can be easily extended to the case of  observables different fr
 \vs
 
 
-\n
+\noindent
 We list here some comments on the above rules. 
-
+\vs
 
 i)  As already mentioned, QM is formulated as a universal theory (in the non relativistic regime) and in principle it can be used to describe both micro and macro systems.
 
