--- a/1409.0755/1409.0755.tex
+++ b/1409.0755/1409.0755.tex
@@ -4,7 +4,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphicx}
-\usepackage[dvips]{color}
+%\usepackage[dvips]{color}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
