--- a/quant-ph-9711048/quant-ph-9711048-psu.tex
+++ b/quant-ph-9711048/quant-ph-9711048-psu.tex
@@ -8,47 +8,55 @@
 
 \usepackage[mathcal]{euscript}
 
-\baselineskip 12pt                   % Line spacing
-\sloppy                              % Makes TeX less fussy about boxes
-\widowpenalty=1000                   % Makes TeX very fussy about widows
-\clubpenalty=1000                    % Makes Tex very fussy about orphans(?)
-\skip\footins 12pt                   % Spacing between main text and ftnote
-\footnotesep 12pt                    % Spacing at the top of ftnotes
-\textwidth 6in                       % Width of text on page
-\textheight 9in                      % Height of text on page
-\setcounter{secnumdepth}{3}          % Allows numbering of sub-sub-sections
-\oddsidemargin .25in                 % Spacing on left margin (+ 1in?)
-\topmargin -.375in                   % Spacing on top margin (+ 1in?)
-\jot .3in                            % Spacing between lines in eqnarray
+\newcommand{\be}{\begin{equation}}
+\newcommand{\ee}{\end{equation}}
 
-\newcommand{\be}{\vspace*{6pt} \begin{equation}}
-\newcommand{\ee}{\vspace*{10pt} \end{equation}}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-                                     % Redefinition of sectioning commands
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
 
-\renewcommand{\section}[1]{\addtocounter{section}{1}
-                           \setcounter{subsection}{0}
-                           \setcounter{subsubsection}{0}
-                           \vspace{20pt}
-                           \begin{center}
-                           {\large \thesection \ #1}
-                           \end{center}
-                           \vspace{20pt}}
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
 
-\renewcommand{\subsection}[1]{\addtocounter{subsection}{1}
-                           \setcounter{subsubsection}{0}
-                           \vspace{20pt}
-                           \begin{center}
-                           \thesubsection \ #1
-                           \end{center}
-                           \vspace{20pt}}
-\renewcommand{\subsubsection}[1]{\addtocounter{subsubsection}{1}
-                           \vspace{20pt}
-                           \begin{center}
-                           \thesubsubsection \ #1
-                           \end{center}
-                           \vspace{20pt}}
+\usepackage{cite}
+\usepackage{microtype}
 
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 \newcommand{\ie}{{\it i.e.}}         %  Latin abbreviations
@@ -91,12 +99,8 @@
 
 \begin{document}
 
-\baselineskip 12pt
-
 \thispagestyle{empty}
 \begin{center}
-
-\vspace*{20pt}
 
 \noindent {\large  {\bf   Dynamics for Density Operator 
 Interpretations of Quantum Theory}}
@@ -138,37 +142,9 @@ examples, and discuss some of the properties of one of them.
 \newpage
 
 \setcounter{page}{1}
-\thispagestyle{empty}
 
-\begin{center}
-
-
-\vspace{12pt}
-
-\noindent Dynamics for Density Operator Interpretations of Quantum 
-Theory
-
-\vspace{20pt}
-\noindent {\bf Abstract}
-\end{center}
-
-\begin{quotation}
-\noindent We first introduce and discuss density operator 
-interpretations of quantum theory as a special case of a more general 
-class of interpretations, giving special attention to a version that 
-we call the `atomic version'.  We then review some crucial parts of 
-the theory of stochastic processes (the proper context in which to 
-discuss dynamics), and develop a general framework for specifying a 
-dynamics for density operator interpretations.  This framework admits 
-infinitely many empirically equivalent dynamics.  We give some 
-examples, and discuss some of the properties of one of them.
-\end{quotation}
-
-\vspace{20pt}
 
 \section{Density Operator Interpretations as Modal Interpretations}
-
-\vspace{-30pt}
 
 \subsection{Introduction to Modal Interpretations}
 
@@ -485,7 +461,6 @@ Bacciagaluppi (1998a).)
 
 \section{Preparatory Discussion of Dynamics}
 
-\vspace{-30pt}
 
 \subsection{Stochastic Processes}
 
@@ -861,8 +836,6 @@ also in the present case.
 
 
 \section{Framework for a Modal Dynamics}
-
-\vspace{-30pt}
 
 \subsection{Continuity of the Evolution of Spectral Projections}
 
@@ -1342,7 +1315,6 @@ used in the purely non-relativistic treatment of the Pauli equation
 
 \section{An Explicit Dynamics}
 
-\vspace{-30pt}
 
 \subsection{The `Minimal Flow' Current}
 
@@ -1874,7 +1846,6 @@ atomic systems.
 
 \section{Properties of the Generalized Schr\"odinger Dynamics}
 
-\vspace{-30pt}
 
 \subsection{Determinism for Free Atomic Systems}
 
