--- a/0802.2225/smthcat.tex
+++ b/0802.2225/smthcat.tex
@@ -1,5 +1,5 @@
 \documentclass[%
-a4paper,%
+12pt,%
 %draft,%
 arxiv,%
 defaults
@@ -31,6 +31,50 @@ geom,%
 {mymacros}
 
 \usepackage{smthcat}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 \newtheorem*{remark*}{Remark}
@@ -1298,9 +1342,9 @@ For \(\Btobj\) a \Btobjalt, define
 \begin{align*}
   \itest_a(\Btobj) &\coloneqq \Hom{\uVAtcat}{\sfunc(\Btobj)}{\uVAtobj}, \\
 %
-  \otest_a(\Btobj) &\coloneqq \{\ofn \colon \forfunc[\uVAtobj] \to \ufunc(\Btobj) : \ofn = \ufunc(\Btmor)\ofn' \text{ for some } \Atobj' \in \Atcat, \ofn' \in \otest_{\uVAtobj}(\Atobj'), \Btmor \colon \Btobj \to \Atobj'\}, \\
+  \otest_a(\Btobj) &\coloneqq \{\ofn \colon \forfunc[\uVAtobj] \to \ufunc(\Btobj)\! : \ofn = \ufunc(\Btmor)\ofn' \text{ for some } \Atobj' \in \Atcat, \ofn' \in \otest_{\uVAtobj}(\Atobj'), \Btmor \colon \Btobj \to \Atobj'\}, \\
 %
-  \itest_b(\Btobj) &\coloneqq \{\ifn \colon \ufunc(\Btobj) \to \forfunc[\uVAtobj] : \ifn = \ifn' \ufunc(\Btmor) \text{ for some } \Atobj' \in \Atcat, \ifn' \in \itest_{\uVAtobj}(\Atobj'), \Btmor \colon \Atobj' \to \Btobj\}, \\
+  \itest_b(\Btobj) &\coloneqq \{\ifn \colon \ufunc(\Btobj) \to \forfunc[\uVAtobj]\! : \ifn = \ifn' \ufunc(\Btmor) \text{ for some } \Atobj' \in \Atcat, \ifn' \in \itest_{\uVAtobj}(\Atobj'), \Btmor \colon \Atobj' \to \Btobj\}, \\
 %
   \otest_b(\Btobj) &\coloneqq \Hom{\uVAtcat}{\uVAtobj}{\sfunc(\Btobj)}.
 \end{align*}
