--- a/0802.2225/smthcat.tex
+++ b/0802.2225/smthcat.tex
@@ -76,7 +76,7 @@ bookmarksopenlevel=10
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %\pdfbookmark[1]{Introduction}{Introduction}
 
-
+\date{21 May 2010}
 \newtheorem*{remark*}{Remark}
 
 \mybibliographystyle
