--- a/2012.14397/2012.14397-psu.tex
+++ b/2012.14397/2012.14397-psu.tex
@@ -1,8 +1,8 @@
 \documentclass[%
  reprint,superscriptaddress,
  amsmath,amssymb,
- aps,twocolumn,pra
-]{revtex4-1}
+ aps,pra, onecolumn, 12pt
+]{revtex4-2}
 
 \usepackage{graphicx}% Include figure files
 \usepackage{multirow}% For tables
@@ -13,24 +13,55 @@
 %singlelinecheck=false % <-- important
 %]{caption}
 
-\usepackage[ pdftex, plainpages = false, pdfpagelabels,
-                 pdfpagelayout = useoutlines,
-                 bookmarks,
-                 bookmarksopen = true,
-                 bookmarksnumbered = true,
-                 breaklinks = true,
-                 linktocpage=all,
-                 pagebackref=false,
-                 colorlinks = true,
-                 linkcolor = BrickRed,
-                 urlcolor  = blue,
-                 citecolor = BrickRed,
-                 anchorcolor = green,
-                 hyperindex = true,
-                 hyperfigures
-                 ]{hyperref}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+
+\usepackage{microtype}
+
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \usepackage[usenames, dvipsnames]{xcolor}
 \usepackage{xifthen}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+\usepackage{eulervm}
 
 \newcommand{\eqn}[1]{\begin{eqnarray} #1 \end{eqnarray}}
 \newcommand{\tit}[1]{\textit{#1}}
@@ -91,6 +122,7 @@
 
 
 \begin{abstract}
+\small\baselineskip=14pt
 The subjective Bayesian interpretation of probability asserts that the rules of the probability calculus follow from the normative principle of Dutch-book coherence: A decision-making agent should not assign probabilities such that a series of monetary transactions based on those probabilities would lead them to expect a sure loss. Similarly, the subjective Bayesian interpretation of quantum mechanics (QBism) asserts that the Born rule is a normative rule in analogy to Dutch-book coherence, but with the addition of one or more empirically based assumptions---i.e., the ``only a little more'' that connects quantum theory to the particular characteristics of the physical world. Here we make this link explicit for a conjectured representation of the Born rule which holds true if symmetric informationally complete POVMs (or SICs) exist for every finite dimensional Hilbert space.  We prove that an agent who thinks they are gambling on the outcomes of measurements on a sufficiently quantum-like system, but refuses to use this form of the Born rule when placing their bets is vulnerable to a Dutch book.  The key property for being sufficiently quantum-like is that the system admits a symmetric reference measurement, but that this measurement is not sampling any hidden variables.
 \end{abstract}
 
