--- a/2012.14397/2012.14397-psu.tex
+++ b/2012.14397/2012.14397-psu.tex
@@ -489,6 +489,7 @@ Templeton Foundation. We thank Darran McManus for comments.
 
 %\bibliography{coherence.bib}
 
+\newpage
 \begin{thebibliography}{99}
 \bibitem{Fuchs10a}
 C.~A. Fuchs, ``QBism, the Perimeter of Quantum Bayes\-ianism,'' (2010); \arxiv{1003.5209}.
@@ -610,6 +611,7 @@ J. B. DeBrota, C. A. Fuchs, J. Pienaar, R. Schack, and B. C. Stacey, in preparat
   
 \end{thebibliography}
 
+\newpage
 
 \begin{appendix}
 \section{Consequences of maximality \label{app:vitality2}}
