--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-07-08 22:33:16 -0400 
+%% Created for Pete Su at 2024-07-24 19:53:37 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{DeBrota2021,
+	author = {DeBrota, John B. and Fuchs, Christopher A. and Pienaar, Jacques L. and Stacey, Blake C.},
+	date-added = {2024-07-24 19:53:31 -0400},
+	date-modified = {2024-07-24 19:53:37 -0400},
+	doi = {10.1103/physreva.104.022207},
+	issn = {2469-9934},
+	journal = {Phys. Rev. A},
+	note = {\href{http://arxiv.org/abs/2012.14397v2}{arxiv:2012.14397v2}},
+	number = {2},
+	publisher = {American Physical Society (APS)},
+	title = {Born's rule as a quantum extension of Bayesian coherence},
+	url = {http://dx.doi.org/10.1103/physreva.104.022207},
+	volume = {104},
+	year = {2021},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physreva.104.022207}}
 
 @article{Teta2010,
 	author = {Teta, Alessandro},
