--- a/2012.14397/2012.14397-psu.tex
+++ b/2012.14397/2012.14397-psu.tex
@@ -61,7 +61,7 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
-\usepackage{eulervm}
+%\usepackage{eulervm}
 
 \newcommand{\eqn}[1]{\begin{eqnarray} #1 \end{eqnarray}}
 \newcommand{\tit}[1]{\textit{#1}}
